objects/tffa__AssetVerification__c.object
<CustomObject>
    <description>Captures the verification details of the asset. The verification of assets implies an inquiry into the value ownership and title
        existence and possession of the presence of any charge on the assets.</description>
    <fields>
        <fullName>tffa__AgencyCode__c</fullName>
        <description>Code of the verification agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AgencyName__c</fullName>
        <description>Name of the verification agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <description>Reference to parent asset object</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Verifications</relationshipLabel>
        <relationshipName>Verifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__ExpiryDate__c</fullName>
        <description>Expiry date of the verification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Remarks__c</fullName>
        <description>Remarks of the verification captured by the verification agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Result__c</fullName>
        <description>Result of the verification captured by the verification agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VerifiedOn__c</fullName>
        <description>Date on which verification was done</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verified on</label>
        <type>Date</type>
    </fields>
    <label>Asset Verification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>